# unifyr

./: .gitignore  .gitlab-ci.yml  .prettierrc  _redirects  bitbucket-pipelines.yml  components.json  eslint.config.js  flake.nix  next-sitemap.config.js  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
app/: layout.tsx  page.tsx  robots.ts
app/(home)/: page.tsx
app/resources/: page.tsx
backend/: .build.rs.swp  Cargo.toml  build.rs  fastly.toml  gdb.txt
backend/common/: Cargo.toml
backend/common/src/: lib.rs
backend/src/: .main.rs.swp  .utils.rs.swp  crt.rs  error.rs  logos.rs  main.rs  rewriter.rs  s3.rs  utils.rs
backend/src/forms/: .creds.rs.swp  .forms.rs.swp  .marketo.rs.swp  apollo.rs  creds.rs  form.rs  forms.rs  marketo.rs  mod.rs  netop.rs  unifyr.rs  validation.rs  validation2.rs
components/: banner.tsx  featuresAndTabs.tsx  imageText.tsx
components/articles/: articleCard.tsx  categoryBadge.tsx
components/featuresAccordionSection/: accordionSection.tsx  index.tsx
components/featuresAndTabs/: index.tsx
components/forms/: contactForm.tsx  getInTouch.tsx
components/g2Leaders/: summer.tsx
components/icons/: agency.tsx  arrow.tsx  partners.tsx  supplier.tsx
components/layouts/: footer.tsx  navbar.tsx  newsLetterSignup.tsx
components/ui/: badge.tsx  button.tsx  carousel.tsx  tabs.tsx
data/: dummyData.tsx  navLinks.ts
lib/: colors.ts  fonts.ts
lib/hooks/: useWindowSize.tsx
queries/: resources.tsx
src/: middleware.ts
src/app/: globals.css  layout.tsx
src/data/: config.ts  (+6 more)
types/: article.ts  images.ts  page.ts
(+275 files in other folders)
