[package]
name = "backend"
version = "0.1.0"
edition = "2021"
publish = false

[profile.release]
codegen-units = 1
lto = true

[features]
production = []
staging = []

[dependencies]
common = { path = "./common" }
bincode = "1.3"

fastly = "0.11"
futures = "0.3"
ring = "0.17"
time = { version = "0.3", features = [ "formatting", "macros" ] }
base64-simd = "0.8"
hex = "0.4"
percent-encoding = "2.3"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lol_html = "2.0"
cookie = "0.18"
thiserror = "2.0"

url = "2.5"

[build-dependencies]
common = { path = "./common" }
bincode = "1.3"

walkdir = "2"
html5ever = "0.29"
markup5ever_rcdom = "0.5.0-unofficial"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "main"
path = "src/main.rs"
